# zxing-cpp

./: CMakeLists.txt
box/: CMakeLists.txt  ZXingBox.cpp  ZXingBox.def
core/: CMakeLists.txt
